finish first draft

--- a/summary/sections/conclusion.tex
+++ b/summary/sections/conclusion.tex
@@ -1,1 +1,8 @@
 \section{Conclusion}
+
+ToDo:
+\begin{itemize}
+\item Mention that we had no reduction proving a LB of $(\delta\Delta)^{1-o(1)}$ as we used reduced parameter sets.
+\item overview of general multivariate approach
+\item Maybe mention what was excluded in this summary
+\end{itemize}
