--- a/summary/sections/introduction.tex
+++ b/summary/sections/introduction.tex
@@ -5,10 +5,13 @@ The input size $n := \max\{|x|, |y|\}$ of the longer and $m := \min\{|x|, |y|\}$
 
 
 
-Greedy Prefix Matching
+Todo:
 
-
-Lemma 7.6
+\begin{itemize}
+\item Motivation
+\item Define LCS
+\item Define \uovh{}
+\end{itemize}
 
 
 \subsection{Notations}
