--- a/summary/sections/main.tex
+++ b/summary/sections/main.tex
@@ -12,7 +12,7 @@ Step one has the goal to properly scope the analysis by specifying the interesti
 The second step then bounds the parameter space by showing which parameter combinations are actually valid and non-trivial.
 The last step is then to find reductions that span the full parameter space.
 Each of the steps will be explained in more detail in the following.
-
+\todo{Give outline}
 
 \input{sections/main_part/1_define_parameters}
 
