--- a/summary/sections/main_part/2_parameter_relations.tex
+++ b/summary/sections/main_part/2_parameter_relations.tex
@@ -58,7 +58,7 @@ To give an example, the LCS instances $x=a^{k}b^{k}$ and $y = ba^k$ for $k\geq 1
 
 
 The full set of parameter relations is given in \autoref{tab:restrictions}.
-Here we can see some trivial bounds, like $\alpha_L \leq \alpha m \leq \alpha_n$, which is due to the trivial relations $L \leq m \leq n$ which are true for every \lcs{} instance.
+Here we can see some trivial bounds, like $\alpha_L \leq \alpha_m \leq \alpha_n$, which is due to the trivial relations $L \leq m \leq n$ which are true for every \lcs{} instance.
 All of the relations are proven in the original paper \cite[section 6]{Bringman.2018}, but in this summary we will only proof the relations $2\alpha_L - \alpha_\Sigma \leq \alpha_M$.
 Note that therefore it suffices to prove $\frac{L^2}{|\Sigma|} \leq M$.
 
