--- a/summary/util/preamble.tex
+++ b/summary/util/preamble.tex
@@ -49,8 +49,8 @@
 
 
 \usepackage{todonotes} % for todos
-%\renewcommand{\todo}[1]{{\footnotesize(\textcolor{orange}{Notiz: #1})}}
-%\renewcommand{\todo}[1]{}
+\renewcommand{\todo}[1]{{\footnotesize(\textcolor{orange}{Notiz: #1})}}
+\renewcommand{\todo}[1]{}
 
 
 % Define a background layer
