--- a/summary/sections/main_part/1_define_parameters.tex
+++ b/summary/sections/main_part/1_define_parameters.tex
@@ -7,7 +7,7 @@ These are:
 	\item the length $L$ of a longest subsequence
 	\item the size $|\Sigma|$ of the underlying alphabet used for $x$ and $y$
 	\item the number $\Delta = n - L$ of deletions in the smaller and $\delta = m - L$ of deletions in the shorter string
-	\item the number of matching pairs $M$ and dominant pairs $d$
+	\item the number of matching pairs $M$ and dominant pairs $d$ \todo{Add formal definitions $M$ and $d$}
 \end{itemize}
 Note, that we always assume $x$ to be the longer string. Otherwise we could just swap $x$ and $y$.\todo{Add Motivation matching pairs and dominant pairs}
 We will use the notation $p(x,y)$ for a parameter $p$ to refer to the value of this parameter for the strings $x$ and $y$.
