start rework of large lcs section

--- a/summary/sections/main_part/reductions/large_lcs.tex
+++ b/summary/sections/main_part/reductions/large_lcs.tex
@@ -16,6 +16,11 @@ To formalize the idea, the authors presented a lemma \cite[Lemma 9.6]{Bringman.2
 
 \input{sections/main_part/reductions/large_lcs/1vs1-2vs1-gadget-tikz}
 
+\input{sections/main_part/reductions/large_lcs/definition_1vs1_2vs1-gadget}
+
+\input{sections/main_part/reductions/large_lcs/proof-1vs1_2vs1-gadget-ortho-lower_bound}
+
+\input{sections/main_part/reductions/large_lcs/proof-1vs1_2vs1-gadget-non_ortho-upper_bound}
 
 
 
