--- a/summary/sections/main_part/reductions/large_lcs/definition_1vs1_2vs1-gadget.tex
+++ b/summary/sections/main_part/reductions/large_lcs/definition_1vs1_2vs1-gadget.tex
@@ -1,6 +1,6 @@
-\begin{definition}
+\begin{definition}[1vs1/2vs1 Gadget]
 Fix $P, Q \geq 1$ with $P = 2Q - N$.
-For $\rho_0 > \rho_1 \leq 0$ and any strings $x_1, x_2, \ldots, x_P$ of length $\ell_x$ and $y_1, y_2, \ldots, y_Q$ of length $\ell_y$ with $L(x_i, y_j) \in \{\rho_0, \rho_1\}$ for all pairs of strings $x_i$ and $y_j$, we define
+For $\rho_0 > \rho_1 \geq 0$ and strings $x_1, \ldots, x_P$ and $y_1, \ldots, y_Q$ of length $\ell_x$ and $\ell_y$ with $L(x_i, y_j) \in \{\rho_0, \rho_1\}$, we define
 \begin{align*}
 	\lLCSGadget{x_1, \ldots, x_P} &:= \gLargeLCS{x_1}\gLargeLCS{x_2} \cdots \gLargeLCS{x_P}\\
 	\lLCSGadget{y_1, \ldots, y_Q} &:= \gLargeLCS{y_1}\gLargeLCS{y_2} \cdots \gLargeLCS{y_Q}
@@ -9,6 +9,11 @@ where $\gLargeLCS{w} = 0^{\gamma_1}1^{\gamma_2}(01)^{\gamma_3}w1^{\gamma_3}$ wit
 We further define $\Gamma := \gamma_1 + \gamma_2 + 3\gamma_3$.
 We say that $\lLCSGadgetName$ is the 1vs1/2vs1 gadget of these strings.
 \end{definition}
+
+We will now prove some properties of this gadget.
+As notation we use in the following $x := \lLCSGadget{x_1, \ldots, x_P}$ and $y := \lLCSGadget{y_1, \ldots, y_Q}$ for any appropriate $P$, $Q$ and strings $x_i$ and $y_j$.
+We show an upper bound for the case that $L(x_i, y_i) = \rho_1$ for all $x_i$ and $y_j$ and a lower bound when one $L(x_i, y_j) = \rho_0$ for appropriate $x_i$ and $y_j$ exists.
+This will later translate to the cases where no orthogonal vectors or one $\langle a_i, b_j \rangle = 0$ exists respectively.
 
 
 \begin{lemma}
@@ -27,8 +32,3 @@ This is because we can greedily match all guarding blocks.
 Both cases are visualized in \autoref{fig:12vs1gadget}.
 \end{proof}
 
-
-We will now prove some properties of this gadget.
-As notation we use in the following $x := \lLCSGadget{x_1, \ldots, x_P}$ and $y := \lLCSGadget{y_1, \ldots, y_Q}$ for any appropriate $P$, $Q$ and strings $x_i$ and $y_j$.
-We show an upper bound for the case that $L(x_i, y_i) = \rho_1$ for all $x_i$ and $y_j$ and a lower bound when one $L(x_i, y_j) = \rho_0$ for appropriate $x_i$ and $y_j$ exists.
-This will later translate to the cases where no orthogonal vectors or one $\langle a_i, b_j \rangle = 0$ exists respectively.
